Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypePriObjIntObjRetBoolean.quorum
class Main
    action Main
        Yoda<Boolean, Boolean, Integer> yoda
        Integer y = yoda:useForce(true, true)
        output "passed"
     end
end
