Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypePriObjBoolObjRetIntegerFail.quorum
class Main
    action Main
        Yoda<Integer, Integer, Boolean> yoda
        boolean y = yoda(66, 66, true)
     end
end
